// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1 makeStyles-root-5"
  >
    <header
      class="makeStyles-header-2"
    >
      <div
        class="makeStyles-toolbar-3"
      >
        <button
          class="makeStyles-button-6"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-7 makeStyles-emoji-8"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-6"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-7 makeStyles-emoji-9"
            role="img"
          >
            🔔
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-4"
    >
      <code
        class="makeStyles-time-10 makeStyles-time-11"
      >
        01:00
      </code>
      <button
        class="makeStyles-button-6"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-7 makeStyles-emoji-12"
          role="img"
        >
          work
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`App renders correctly 2`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1 makeStyles-root-5"
  >
    <header
      class="makeStyles-header-2"
    >
      <div
        class="makeStyles-toolbar-3"
      >
        <button
          class="makeStyles-button-6"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-7 makeStyles-emoji-8"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-6"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-7 makeStyles-emoji-9"
            role="img"
          >
            🔕
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-4"
    >
      <code
        class="makeStyles-time-10 makeStyles-time-11"
      >
        01:00
      </code>
      <button
        class="makeStyles-button-6"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-7 makeStyles-emoji-12"
          role="img"
        >
          work
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`App renders correctly 3`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1 makeStyles-root-5"
  >
    <header
      class="makeStyles-header-2"
    >
      <div
        class="makeStyles-toolbar-3"
      >
        <button
          class="makeStyles-button-6"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-7 makeStyles-emoji-8"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-6"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-7 makeStyles-emoji-9"
            role="img"
          >
            🔔
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-4"
    >
      <code
        class="makeStyles-time-10 makeStyles-time-11"
      >
        01:00
      </code>
      <button
        class="makeStyles-button-6"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-7 makeStyles-emoji-12"
          role="img"
        >
          work
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`App renders correctly after emoji has been changed 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-13 makeStyles-root-17"
  >
    <header
      class="makeStyles-header-14"
    >
      <div
        class="makeStyles-toolbar-15"
      >
        <button
          class="makeStyles-button-18"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-19 makeStyles-emoji-20"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-18"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-19 makeStyles-emoji-21"
            role="img"
          >
            🔔
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-16"
    >
      <code
        class="makeStyles-time-22 makeStyles-time-23"
      >
        01:00
      </code>
      <button
        class="makeStyles-button-18"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-19 makeStyles-emoji-24"
          role="img"
        >
          work
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`App renders correctly after emoji has been changed 2`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-13 makeStyles-root-17"
  >
    <header
      class="makeStyles-header-14"
    >
      <div
        class="makeStyles-toolbar-15"
      >
        <button
          class="makeStyles-button-18"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-19 makeStyles-emoji-20"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-18"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-19 makeStyles-emoji-21"
            role="img"
          >
            🔔
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-16"
    >
      <code
        class="makeStyles-time-22 makeStyles-time-23"
      >
        01:00
      </code>
      <button
        class="makeStyles-button-18"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-19 makeStyles-emoji-24"
          role="img"
        >
          👩‍💻
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`App renders correctly after session type has been changed 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-25 makeStyles-root-29"
  >
    <header
      class="makeStyles-header-26"
    >
      <div
        class="makeStyles-toolbar-27"
      >
        <button
          class="makeStyles-button-30"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-31 makeStyles-emoji-32"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-30"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-31 makeStyles-emoji-33"
            role="img"
          >
            🔔
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-28"
    >
      <code
        class="makeStyles-time-34 makeStyles-time-35"
      >
        01:00
      </code>
      <button
        class="makeStyles-button-30"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-31 makeStyles-emoji-36"
          role="img"
        >
          work
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`App renders correctly after session type has been changed 2`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-25 makeStyles-root-29"
  >
    <header
      class="makeStyles-header-26"
    >
      <div
        class="makeStyles-toolbar-27"
      >
        <button
          class="makeStyles-button-30"
          tooltiptext="Toggle theme"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle theme"
            class="makeStyles-emoji-31 makeStyles-emoji-32"
            role="img"
          >
            ☀️
          </span>
        </button>
        <button
          class="makeStyles-button-30"
          tooltiptext="Toggle sound"
        >
          <span
            aria-hidden="false"
            aria-label="Toggle sound"
            class="makeStyles-emoji-31 makeStyles-emoji-33"
            role="img"
          >
            🔔
          </span>
        </button>
      </div>
    </header>
    <main
      class="makeStyles-content-28"
    >
      <code
        class="makeStyles-time-34 makeStyles-time-35"
      >
        01:00
      </code>
      <button
        class="makeStyles-button-30"
      >
        <span
          aria-hidden="true"
          aria-label=""
          class="makeStyles-emoji-31 makeStyles-emoji-36"
          role="img"
        >
          break
        </span>
      </button>
    </main>
  </div>
</DocumentFragment>
`;
